# EdgeSense

./: .gitattributes  .gitignore  AGENT_HANDOFF.md  README.md  main.py  pyproject.toml  readme.md
docs/: EDGE_BENCHMARK.md  FEEDBACK_PLAN.md  LITERATURE_SUMMARY.md  VERIFICATION.md
reports/cmapss_evaluation/: metrics.json  predictions_per_test_unit.csv  rul_head_history.csv
reports/edge_benchmark/: metrics.json
reports/full_evaluation/: metrics.json  model_config.json  pr_curve.csv  preprocessor.pkl  scores_timeline.csv  training_history.csv  usad_conv1d.pt
reports/hydraulic_evaluation/: metrics.json  per_cycle_scores.csv
scripts/: audit_unlabeled_peaks.py  benchmark_edge.py  generate_figures.py  generate_multi_dataset_figures.py  plot_anomaly_timeline.py  plot_binary_timeline.py  plot_edge_benchmark.py  plot_june_zoom.py  plot_pr_curve.py  plot_training_and_latent.py  precision_recall_point_adjust.py  pretrain_showcase.py  run_cmapss_evaluation.py  run_full_evaluation.py  run_hydraulic_evaluation.py  run_online_eval.py  run_simulation.py  verify_layer2.py  verify_layer3.py
src/edgesense/: __init__.py  data_ingestion.py  evaluation.py  feedback.py  health.py  preprocessing.py  scoring.py  training.py  windowing.py
src/edgesense/cmms/: __init__.py  base.py  builder.py  mock.py
src/edgesense/datasets/: __init__.py  cmapss.py  hydraulic.py  metropt.py
src/edgesense/models/: __init__.py  rul_head.py  usad_cnn.py
src/edgesense/sim/: __init__.py  api.py  artifacts.py  bus.py  device.py  source.py
src/edgesense/sim/static/: dashboard.js  index.html  style.css
